--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@apollo/client": "^3.4.8",
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
+    "@types/next-auth": "^3.15.0",
     "apollo-upload-client": "^15.0.0",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
     "next": "^11.1.0",
+    "next-auth": "^3.28.0",
     "next-pwa": "^5.3.1",
     "next-themes": "0.0.14",
     "nookies": "^2.5.2",
